# juce-cmake-vscode

./: CMakeLists.txt  JUCE.cmake  README.md
src/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
